--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "scripts": {
     "type-check": "yarn workspace server type-check && yarn workspace client type-check",
-    "format": "prettier --write \"{,shared,client/src,server/src}/**/*.{js,jsx,ts,tsx,json,yaml,md}\"",
+    "format": "prettier --write \"{,shared,client/src,server/src}/**/*.{js,jsx,ts,tsx,json,yaml,yml,md}\"",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --ignore-path .gitignore . --max-warnings=0",
     "lint:fix": "yarn lint --fix",
     "rm-node-modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +"
@@ -27,8 +27,23 @@
     "eslint-config-next": "^12.0.10",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "yarn lint"
+    ],
+    "*.{js,jsx,ts,tsx,json,yaml,yml,md}": [
+      "yarn format"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
