modify: port config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   db:
@@ -8,7 +8,7 @@ services:
       - .env
     restart: unless-stopped
     ports:
-      - 25432:5432
+      - ${DB_HOST_PORT}:${DB_CONTAINER_PORT}
     volumes:
       - ./db/postgresql/data:/var/lib/postgresql/data
       - ./db/initdb.d:/docker-entrypoint-initdb.d
@@ -23,7 +23,7 @@ services:
     depends_on:
       - db
     ports:
-      - 8080:8080
+      - ${SERVER_PORT}:${SERVER_PORT}
     restart: unless-stopped
     environment:
       - PORT=${SERVER_PORT}
@@ -46,7 +46,7 @@ services:
       - db
       - server
     ports:
-      - 3000:3000
+      - ${CLIENT_PORT}:${CLIENT_PORT}
     restart: unless-stopped
     env_file:
       - .env
