--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,9 @@
+# ports
+DB_HOST_PORT=25432
+DB_CONTAINER_PORT=5432
+CLIENT_PORT=3001
+SERVER_PORT=8081
+
 # docker
 DOCKER_ENV=development
 
@@ -8,11 +14,9 @@ POSTGRES_DB=typescript_monorepo_template
 TZ='Asia/Tokyo'
 
 # client
-CLIENT_PORT=3000
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
-NEXT_PUBLIC_API_BASE_URL=http://localhost:8080
+NEXT_PUBLIC_BASE_URL=http://localhost:${CLIENT_PORT}
+NEXT_PUBLIC_API_BASE_URL=http://localhost:${SERVER_PORT}
 CHOKIDAR_USEPOLLING=true
 
 # server
-SERVER_PORT=8080
-DATABASE_URL=postgresql://postgres:password@db:5432/typescript_monorepo_template
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${DB_CONTAINER_PORT}/${POSTGRES_DB}
