modify: docker env and node image

--- a/.env.sample
+++ b/.env.sample
@@ -1,16 +1,22 @@
+# service
+SERVICE_NAME=fitness_scraper
+
 # ports
-DB_HOST_PORT=25432
+DB_HOST_PORT=35432
 DB_CONTAINER_PORT=5432
-CLIENT_PORT=3001
-SERVER_PORT=8081
+CLIENT_PORT=3002
+SERVER_PORT=8082
 
 # docker
 DOCKER_ENV=development
+DB_CONTAINER_NAME=${SERVICE_NAME}_db
+SERVER_CONTAINER_NAME=${SERVICE_NAME}_server
+CLIENT_CONTAINER_NAME=${SERVICE_NAME}_client
 
 # db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
-POSTGRES_DB=typescript_monorepo_template
+POSTGRES_DB=${SERVICE_NAME}
 TZ='Asia/Tokyo'
 
 # client
@@ -19,4 +25,4 @@ NEXT_PUBLIC_API_BASE_URL=http://localhost:${SERVER_PORT}
 CHOKIDAR_USEPOLLING=true
 
 # server
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${DB_CONTAINER_PORT}/${POSTGRES_DB}
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_CONTAINER_NAME}:${DB_CONTAINER_PORT}/${POSTGRES_DB}
