--- a/Dockerfile_development
+++ b/Dockerfile_development
@@ -1,4 +1,7 @@
-FROM node:16.13
+FROM node:16.14-slim
+
+RUN apt-get update
+RUN apt-get install -y openssl
 
 ARG WORKSPACE
 ENV WORKSPACE=$WORKSPACE
